--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Your Website Title</title>
+  <title>Old Line Money Company</title>
 </head>
 <body>
   <div class="logo-container">
-    <img src="logo.png" alt="Your Logo">
+    <img src="OLMC_2023.PNG" alt="OLMC Logo">
   </div>
 </body>
 </html>
