--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
+  <div class="logo-container">
+    <img src="OLMC_2023.PNG" alt="OLMC Logo">
+  </div>
+</body>
+</html>
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Old Line Money Company</title>
 </head>
+
 <body>
-  <div class="logo-container">
-    <img src="OLMC_2023.PNG" alt="OLMC Logo">
+  <div class="center">
+    <div class="logo-container">
+      <img src="OLMC_2023.PNG" alt="OLMC Logo">
+    </div>
   </div>
 </body>
+
 </html>
