--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <img src="OLMC_2023.PNG" alt="OLMC Logo">
     </div>
   </div>
+  <div class="footer">
+    <p>All rights reserved. 2023</p>
+  </div>
 </body>
 
 </html>
