--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <div class="center">
+  <div class="main-container">
     <div class="logo-container">
       <img src="OLMC_2023.PNG" alt="OLMC Logo">
     </div>
-  </div>
-  <div class="footer">
-    <p>All rights reserved. 2023</p>
+    <div class="footer">
+      <p>All rights reserved. 2023</p>
+    </div>
   </div>
 </body>
 
